[package]
name = "bscscan_client"
version = "0.1.0"
edition = "2021"
keywords = ["bscscan","binance_smart_chain", "bsc", "bscchain_api"]
repository = "https://github.com/cfping/bscscan_client"
description = "bscscan api client"
license="MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"


[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"